# name: TestUpdate.test_active[uvloop]
  <class 'dict'> {
    'active': True,
    'color': 'grey',
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'message': 'Change test message content',
    'updated_at': '2015-10-06T20:00:00Z',
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
  }
---
# name: TestUpdate.test_deactivate[uvloop]
  <class 'dict'> {
    'active': False,
    'color': 'grey',
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'message': 'Change message',
    'updated_at': '2015-10-06T20:00:00Z',
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
  }
---
# name: test_create[uvloop]
  <class 'dict'> {
    'active': True,
    'color': 'red',
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'message': 'This is a new message',
    'updated_at': '2015-10-06T20:00:00Z',
    'user': <class 'dict'> {
      'administrator': True,
      'handle': 'bob',
      'id': 'test',
    },
  }
---
# name: test_get[uvloop-None]
  <class 'dict'> {
    'active': True,
    'color': 'yellow',
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'message': 'This is a test message',
    'updated_at': '2015-10-06T20:00:00Z',
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
  }
---
